# SQL-PerfPredictor-Optimizer

./: README.md  pyproject.toml  requirements.txt
backend/: api.py
db/: init_db.py
frontend/: app.py
frontend/assets/: custom.css  matrix.js
ml/: train_model.py
utils/: sql_parser.py
